:bug: visibility of cloze in dark mode (template)
- Default cloze color on dark mode is lightblue.
- CSS migration script added.

Fixes #13

--- a/src/template/style.css
+++ b/src/template/style.css
@@ -10,6 +10,10 @@
     color: blue;
 }
 
+.nightMode .cloze {
+    color: lightblue;
+}
+
 cz_hide {
     display: none;
 }
